--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://pixessa-bucket.s3.us-east-2.amazonaws.com/single+logo+pixessa-1.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://pixessa-bucket.s3.us-east-2.amazonaws.com/single+logo+pixessa-1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Photography created by rjaystudio"
+      content="Pixessa by rjaystudio"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rjay Studio App | Home</title>
+    <title>Pixessa | Home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
