--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="js/vendor/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery.slicknav.min.js+slick.min.js.pagespeed.jc.RbuEYeUO0i.js"></script><script>eval(mod_pagespeed_c3s9oozJyJ);</script>
-    <script>eval(mod_pagespeed_CZjGHxR4No);</script>
-    <script src="js/fresco.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/vendor/jquery-3.2.1.min.js"></script> -->
+    <!-- <script src="js/jquery.slicknav.min.js+slick.min.js.pagespeed.jc.RbuEYeUO0i.js"></script><script>eval(mod_pagespeed_c3s9oozJyJ);</script> -->
+    <!-- <script>eval(mod_pagespeed_CZjGHxR4No);</script> -->
+    <!-- <script src="js/fresco.min.js"></script> -->
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
